# base-cmake-cpp

./: CMakeLists.txt
src/: main.cpp
